<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">约么</string>
    <string name="tips">提示</string>
    <string name="please_choose">请选择</string>
    <string name="share">分享</string>
    <string name="right">好的</string>
    <string name="hardLoading">努力加载中...</string>
    <string name="badNetwork">网络差</string>
    <string name="versionIsAlreadyNew">已经是最新版本了</string>
    <string name="sureToUpdate">确定更新版本吗</string>
    <string name="updateLog">更新日志</string>
    <string name="installNewVersion">安装新版本</string>
    <string name="laterNotify">稍后提醒</string>
    <string name="haveNewVersion">版本更新</string>
    <string name="cancel">取消</string>
    <string name="voice">语音</string>
    <string name="pressToRecord">按住录音</string>
    <string name="pleaseSayMore">说多点吧～</string>
    <string name="failedToGetData">获取数据失败</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="sex">性别</string>
    <string name="status_online">[在线]</string>
    <string name="status_offline">[离线请留言]</string>
    <string name="sending">发送中</string>
    <string name="received">已接收</string>
    <string name="messages">会话</string>
    <string name="contact">联系人</string>
    <string name="action_settings">Settings</string>
    <string name="me">个人中心</string>
    <string name="discover">约么</string>
    <string name="emptyStr"></string>
    <string name="avatar">头像</string>
    <string name="username">用户</string>
    <string name="nickname">昵称</string>
    <string name="please_input_hint">请输入{0}</string>
    <string name="change_title">{0}</string>
    <string name="sent">已发送</string>
    <string name="failed">失败</string>
    <string name="newMessage">新的消息</string>
    <string name="image">图片</string>
    <string name="cancelRecord">取消录音</string>
    <string name="audio">语音</string>
    <string name="getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="position">位置</string>
    <string name="geoIsSame">获取坐标相同</string>
    <string name="mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="cannotFindResult">抱歉，未能找到结果</string>
    <string name="reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="send">发送</string>
    <string name="cannotGetYourAddressInfo">无法获取到您的位置信息！</string>
    <string name="emotion">表情</string>
    <string name="pleaseCheckNetwork">请检查网络</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_nickname_hint">请输入昵称</string>
    <string name="ensurePasswordHint">请再次输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_student_id_hint">请输入您的学号</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="nickname_cannot_null">昵称不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功，尽快验证您的学号邮箱即可登入</string>
    <string name="registerFailed">注册失败。</string>
    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册</string>
    <string name="metres">米</string>
    <string name="unknown">未知</string>
    <string name="recent_login_time">最近登录时间:</string>
    <string name="account">账号 </string>
    <string name="search">搜索</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="vibrate">震动</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="new_friends">新朋友</string>
    <string name="deleteFriendRequest">删除好友请求</string>
    <string name="agreed">已同意</string>
    <string name="deleteContact">删除联系人</string>
    <string name="sure">确定</string>
    <string name="deleteSucceed">删除成功</string>
    <string name="findFriends">查找好友</string>
    <string name="dataLoadFinish">数据加载完成</string>
    <string name="add">添加</string>
    <string name="sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="personalInfo">个人资料</string>
    <string name="detailInfo">详细资料</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="noResult">无相关结果</string>
    <string name="loadMessagesFinish">聊天记录加载完毕</string>
    <string name="notifySetting">相关设置</string>
    <string name="notifyWhenNews">接收新消息通知</string>
    <string name="group">群组</string>
    <string name="groupName">群组名</string>
    <string name="create">创建</string>
    <string name="groupMembers">群组成员</string>
    <string name="inviteSucceed">已发出邀请</string>
    <string name="inviteMembers">邀请群成员</string>
    <string name="kickTips">确认要踢走该成员吗</string>
    <string name="invite">邀请</string>
    <string name="kilometres">公里</string>
    <string name="quitGroup">退群</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="checkUpdate">检查更新</string>
    <string name="haveRead">已阅读</string>
    <string name="slideUpToCancel">手指上滑，取消发送</string>
    <string name="releaseToCancel">松开手指，取消录音</string>
    <string name="sessionPausedTips">会话暂停，等网络良好</string>
    <string name="sort">排序</string>
    <string name="loginTime">登录时间</string>
    <string name="distance">距离</string>
    <string name="select_picture">选择图片</string>
    <string name="listEmptyHint">无数据</string>
    <string name="noMore">已无更多</string>
    <string name="yue">约！</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="changepassword">修改密码</string>
    <string name="hello_world">Hello world!</string>
    <string name="changePassword">修改密码</string>
    <string name="noequal">您的账号和密码不匹配</string>
    <string name="changeFailed">改密失败</string>
    <string name="changeSucceed">改密成功</string>
    <string name="title_activity_register_activity2">RegisterActivity2</string>
    <string name="title_activity_register_activity1">RegisterActivity1</string>
    <string name="title_activity_register_activity3">RegisterActivity3</string>
    <string name="title_activity_register_activity4">RegisterActivity4</string>

    <!-- entry_register1 -->
    <string name="school">学校</string>

    <!-- entry_register2 -->


    <!-- entry_register3 -->


    <!-- entry_register4 -->
    <string name="student_id">学号</string>
    <string name="note1">我们将发送一封邮件到您的学号邮箱，验证完成就能使用。</string>
    <string name="username_used">对不起，该用户名已被使用</string>
    <string name="student_id_empty">学号不能为空</string>
    <string name="birthday">生日</string>
    <string name="peoples">民族</string>
    <string name="hometown">地区</string>
    <string name="YPA">YPA</string>
    <string name="characristics">性格</string>
    <string name="hobbies">爱好</string>
    <string name="sign">签名</string>
    <string name="stuId">学号</string>
    <string name="userInfo">个人信息</string>
    <string name="speciality">特长</string>
    <string name="specialattention">特别关注</string>
    <string name="talk">聊天</string>
    <string name="deleteSpecial">删除特别关注</string>
    <string name="Choose">请选择</string>
    <string name="choose_type">您的发布信息不完整，请重新输入！</string>
    <string name="play">约娱乐</string>
    <string name="study">约学习</string>
    <string name="sport">约运动</string>
    <string name="eat">约美食</string>
    <string name="others">约其他</string>
    <string name="addSucceed">添加成功</string>

    <string-array name="school_array">
        <item>复旦大学</item>
        <item>同济大学</item>
        <item>上海交通大学</item>
    </string-array>
    <string-array name="school_mail">
        <item>\@fudan.edu.cn</item>
        <item>\@tongji.edu.cn</item>
        <item>\@sjtu.edu.cn</item>
    </string-array>
    <string-array name="type_array">
        <item>美食</item>
        <item>学习</item>
        <item>运动</item>
        <item>娱乐</item>
        <item>其他</item>
    </string-array>

    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_user_characristics">UserCharacristicsActivity</string>
    <string name="title_activity_user_hobbies">UserHobbiesActivity</string>
    <string name="title_activity_user_sign">UserSignActivity</string>
    <string name="title_activity_user_speciality">UserSpecialityActivity</string>
    <string name="oldPassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="confirm_newPassword">确认新密码</string>
    <string name="change_password_old">请输入旧密码</string>
    <string name="change_password_new">请输入新密码</string>
    <string name="change_password_new_confirm">请再次输入新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="focus">特别关注</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="email_input">请输入学号邮箱</string>
    <string name="passwordResetNotice">请在下面输入您的用户名和学号邮箱，验证正确之后，我们将发送一份重置密码的指令到您的邮箱</string>
    <string name="save">保存</string>
    <string name="saveSuccess">保存成功</string>
    <string name="title_activity_user_hometown">UserHometownActivity</string>
    <string name="title_activity_user_nickname">UserNickname</string>
    <string name="title_activity_deal_with_yue">DealWithYueActivity</string>

    <string name="deal_with_apply">邀约请求处理</string>
    <string name="deleteApplyRequest">删除邀约请求</string>

</resources>