<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.syc.yueme.ui.activity.RegisterActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/oldPassword"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText1"
        android:hint="@string/change_password_old"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView1"
        android:background="@drawable/login_edit_normal"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/newPassword"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText2"
        android:hint="@string/change_password_new"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/login_edit_normal"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_newPassword"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText3"
        android:background="@drawable/login_edit_normal"
        android:inputType="textPassword"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/change_password_new_confirm"/>

    <RelativeLayout
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:onClick="onClick">

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            style="@style/My.Button.logout"
            android:layout_centerInParent="true"
            android:text="确认修改" />

    </RelativeLayout>

</RelativeLayout>


